// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Application 1`] = `
<i
  className="icon argo-icon-application"
  title="Application"
/>
`;

exports[`ConfigMap 1`] = `
<img
  alt="ConfigMap"
  src="assets/images/resources/cm.svg"
  style={
    Object {
      "height": "32px",
      "padding": "2px",
      "width": "40px",
    }
  }
/>
`;

exports[`FourWords 1`] = `
<div
  style={
    Object {
      "display": "inline-block",
      "height": "32px",
      "padding": "2px 4px",
      "width": "40px",
    }
  }
>
  <i
    className="icon fa fa-circle"
    title="FourWordsFooBar"
  />
  <div
    style={
      Object {
        "color": "white",
        "fontSize": "0.6em",
        "left": "10px",
        "margin": "auto",
        "position": "absolute",
        "textAlign": "center",
        "top": "14px",
        "width": "40px",
      }
    }
  >
    FWFB
  </div>
</div>
`;

exports[`OneWord 1`] = `
<div
  style={
    Object {
      "display": "inline-block",
      "height": "32px",
      "padding": "2px 4px",
      "width": "40px",
    }
  }
>
  <i
    className="icon fa fa-circle"
    title="OneWord"
  />
  <div
    style={
      Object {
        "color": "white",
        "fontSize": "1em",
        "left": "10px",
        "margin": "auto",
        "position": "absolute",
        "textAlign": "center",
        "top": "10px",
        "width": "40px",
      }
    }
  >
    OW
  </div>
</div>
`;

exports[`ThreeWords 1`] = `
<div
  style={
    Object {
      "display": "inline-block",
      "height": "32px",
      "padding": "2px 4px",
      "width": "40px",
    }
  }
>
  <i
    className="icon fa fa-circle"
    title="ThreeWordsFoo"
  />
  <div
    style={
      Object {
        "color": "white",
        "fontSize": "0.6em",
        "left": "10px",
        "margin": "auto",
        "position": "absolute",
        "textAlign": "center",
        "top": "14px",
        "width": "40px",
      }
    }
  >
    TWF
  </div>
</div>
`;

exports[`TwoWords 1`] = `
<div
  style={
    Object {
      "display": "inline-block",
      "height": "32px",
      "padding": "2px 4px",
      "width": "40px",
    }
  }
>
  <i
    className="icon fa fa-circle"
    title="TwoWords"
  />
  <div
    style={
      Object {
        "color": "white",
        "fontSize": "1em",
        "left": "10px",
        "margin": "auto",
        "position": "absolute",
        "textAlign": "center",
        "top": "10px",
        "width": "40px",
      }
    }
  >
    TW
  </div>
</div>
`;
